<resources>
    <string name="app_name">Mob Products</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_transition">product transition</string>
    <string name="product_name_transition">product name transition</string>
    <string name="products_label">Products</string>
    <string name="product_detail_label">Product detail</string>
    <string name="error">An error occurred</string>
    <string name="no_products">Sorry, no products :(</string>
</resources>